Revision history for Acme-CPANAuthors-CPAN-OneHundred
=====================================================

        [New Authors]
        - PERLANCAR, RSAVAGE

        [See You Again?]
        - MLEHMANN

        [Updated Counts]
        - RJBS, TOBYINK, SHARYANTO, FLORA, INGY, BINGOS, SMUELLER, DAGOLDEN,
        ETHER, KENTNL, DROLSKY, PEVANS, GUGOD, BARBIE, SHLOMIF, SALVA, BDFOY

1.05    2014-10-04
        [Updated Counts]
        - SHARYANTO, RJBS, TOBYINK, INGY, TOKUHIROM, DAGOLDEN, KENTNL, ETHER,
        - PEVANS, BARBIE

1.04    2014-08-17
        - fixed license fields in META.json to be lists.
        - added check100.pl script.
        - extended test suite.

        [Updated Counts]
        - SHARYANTO, TOBYINK, BINGOS, INGY, DAGOLDEN, ETHER, KENTNL, PEVANS,
        - BARBIE

1.03    2014-06-26
        [New Authors]
        - BARBIE

        [Updated Counts]
        - SHARYANTO, TOBYINK, INGY, ETHER, KENTNL, PEVANS, SALVA

1.02    2014-06-07
        - fix path to GitHub repo.
        - backup previous list (in the event we need to rerun).
        - reworked ordering of lists.

        [Updated Counts]
        - SHARYANTO, TOBYINK, DAGOLDEN, ETHER, DROLSKY, KENTNL

1.01    2014-06-01
        - #96117 - documentation fixes. (Thanks to Toby Inkster).

1.00    2014-05-31
        - First version.